correcting overflow to show the first data fetched

--- a/style.css
+++ b/style.css
@@ -174,16 +174,14 @@ background-size: cover;
   margin-top: 20px;
   margin-left: 65px;
   border-radius: 3%;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .tripContainer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   height: 70%;
-  /* overflow: scroll; */
 }
 
 .trip {
